# cef_of_player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: install_deps.sh
simpleapp/: CMakeLists.txt  SimpleClient.h  cefApp.h  cefsimple_linux.cc  main.cpp  ofApp.cpp  ofApp.h  simple_client.h
simpleapp/animation/: bouncing_ball.html  bouncing_ball.js  index.html
src/: main.cpp  ofApp.cpp  ofApp.h
